added coverage section

--- a/package.json
+++ b/package.json
@@ -59,6 +59,9 @@
     "collectCoverageFrom": [
       "src/**/{!(serviceWorker.js),}.js",
       "!src/index.js"
-    ]
-  }
+    ],
+    "coverageReporters": [
+      "text",
+      "cobertura"
+    ]  }
 }
