--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,7 +10,8 @@ sonar.projectKey=react-testing-app:1.0
 
 # Path is relative to the sonar-project.properties file. Defaults to .
 sonar.sources=./src
-
+sonar.tests=./src/__tests__
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.exclusions=./src/__tests__/**, ./src/index.js,./src/serviceWorker.js
