--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,9 +9,9 @@ sonar.projectKey=react-testing-app:1.0
 #sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Defaults to .
-sonar.exclusions=./src/__tests__/**/*, ./src/index.js,./src/serviceWorker.js
+sonar.exclusions=./src/__tests__/**/*.test.js, ./src/__tests__/**/*.spec.js, ./src/index.js,./src/serviceWorker.js
 sonar.sources=./src
-sonar.tests=./src/__tests__
+#sonar.tests=./src/__tests__
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
