Fixed the issue related to duplicate indexing

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,7 +10,7 @@ sonar.projectKey=react-testing-app:1.0
 
 # Path is relative to the sonar-project.properties file. Defaults to .
 sonar.sources=./src
-sonar.tests=./src/__tests__
+#sonar.tests=./src/__tests__
 sonar.exclusions=./src/index.js,./src/serviceWorker.js
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
